@@ -1,6 +1,17 @@
 PHOEBE Project ChangeLog:
 ----------------------------------------------------------------------------
 
+2006-12-10: - All phoebe_warning () calls reviewed and all missing 
+              newlines were added.
+            - Two arrays in LC and DC that were containing Legendre
+              coefficients were overflown by the addition of the H
+              passband. This is now fixed and new lc and dc binaries
+              are now used.
+            - The file phoebe_atmcofplanck.dat uses 'D' as the exponent
+              delimiter, whereas standard C delimeter is 'E'. Added
+              coefficients thus used E instead of D, which has now been
+              changed. This shouldn't have affected the program, but it
+              is much nicer this way.
 2006-11-27: - Upon request of Yilen Gomez, H passband intensities added
               to atmcofplanck.dat. In order to distinguish between the
               two, the name of this auxiliary file has been changed both
